--- a/app_pressure/templates/app_pressure/pressure_details.html
+++ b/app_pressure/templates/app_pressure/pressure_details.html
@@ -72,6 +72,23 @@
                 {% endif %}
 
             </div>
+
+            <div class="uk-position-center uk-position-relative">
+                <span>
+                    {% if prev_view %}
+                        <a href="{% url 'pressure_details_url' id=first_view.id %}" style="color: #00BFFF; margin-right: 20px">Pierwszy wpis</a>
+                        <a href="{% url 'pressure_details_url' id=prev_view.id %}" style="color: #32CD32; margin-right: 20px">Poprzedni wpis</a>
+                    {% endif %}
+                </span>
+{#                <span style="margin-right: 20px"> Wpis {{ current_element_index }} z {{ all_element_index }}</span>#}
+                <span>
+                    {% if next_view %}
+                        <a href="{% url 'pressure_details_url' id=next_view.id %}" style="color: #32CD32">Następny wpis</a>
+                        <a href="{% url 'pressure_details_url' id=last_view.id %}" style="color: #00BFFF; margin-left: 20px">Ostatni wpis</a>
+                    {% endif %}
+                </span>
+            </div>
+
             <div class="uk-card-footer">
                 <a href="/pressures"
                    class="uk-button uk-button-text uk-position-relative uk-position-top-center">Zamknij</a>
