--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -20,7 +20,8 @@
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="{% url 'info_url' %}">Info</a></li>
-                        <li><a href="{% url 'profile_details_url' %}">profil</a></li>
+                        <li><a href="{% url 'profile_details_url' %}">Profil</a></li>
+                        <li><a href="{% url 'history_url' %}">Historia</a></li>
                     </ul>
                 </div>
             </li>
