proby zapamietaj mnie - nie działa

--- a/app_users/templates/registration/login.html
+++ b/app_users/templates/registration/login.html
@@ -49,10 +49,10 @@
                 <input id="show_pass_ch" name="show_pass" type="checkbox" onclick="show_fuction()" />
                 <label for="show_pass" class="inline"> Pokaż hasło</label>
             </div>
-{#            <div class="uk-inline uk-width-1-2 uk-text-right">#}
-{#                <input id="remember_me" name="remember-me" type="checkbox"/>#}
-{#                <label for="remember_me" class="inline">Pamiętaj mnie</label>#}
-{#            </div>#}
+            <div class="uk-inline uk-width-1-2 uk-text-right">
+                <input id="remember_me" name="remember_me" type="checkbox"/>
+                <label for="remember_me" class="inline">Pamiętaj mnie</label>
+            </div>
         </div>
 
         {% if form.errors %}
