--- a/app_users/templates/history.html
+++ b/app_users/templates/history.html
@@ -20,13 +20,13 @@
                 </div>
             </div>
 
-            <div class="uk-card-body" style="width:1000px; margin: auto">
+            <div class="uk-card-body" style="width:1100px; margin: auto">
                 <div>
                     <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
                     <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
                         <form class="uk-search uk-width-1-1">
                             <input name="search" class="uk-search-input" type="search"
-                                   placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="3" maxlength="10"
+                                   placeholder="Wyszukaj po IP, 3-10 znaków." minlength="3" maxlength="10"
                                    aria-label="Search"
                                    autofocus>
                         </form>
@@ -47,8 +47,10 @@
                         <th style="width:20%; text-align: center" class="uk-text-middle">Klijent</th>
                         <th style="width:30%; text-align: center" class="uk-text-middle">IP</th>
                         <th style="width:5%; text-align: center" class="uk-text-middle">Błędy logowania</th>
-                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba nowych</th>
+                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba nowych wpisów</th>
                         <th style="width:5%; text-align: center" class="uk-text-middle">Liczba modyfikacji</th>
+                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba pojedynczych skasowań</th>
+                        <th style="width:5%; text-align: center" class="uk-text-middle">Liczba wszystkich skasowań</th>
                     </tr>
                     </thead>
 
@@ -64,8 +66,10 @@
                             <td>{{ value.user_agent }}</td>
                             <td>{{ value.ip_address }}</td>
                             <td>{{ value.failed_login_attempts }}</td>
-                            <td>{{ value.cnt_modification }}</td>
                             <td>{{ value.cnt_entries }}</td>
+                            <td>{{ value.cnt_modification }}</td>
+                            <td>{{ value.cnt_deleted }}</td>
+                            <td>{{ value.cnt_all_deleted }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
