--- a/app_web/templates/app_web/home.html
+++ b/app_web/templates/app_web/home.html
@@ -7,8 +7,12 @@
 
     <div class="container">
         <h2 class="uk-heading-divider" style="position:center">
-            <span>Witaj</span>
-            <span>użytkowniku</span>
+            <span>Witaj użytkowniku, widzieliśmy się {{ date_last_visits }} </span>
+            {% if date_last_visits == 1 %}
+                <span> dzień temu. </span>
+            {% else %}
+                <span> dni temu. </span>
+            {% endif %}
         </h2>
 
         <div class="uk-panel">
